kubernetes/dev/compute-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beekeeper-api
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: beekeeper-api
        resources:
          limits:
            cpu: 4
            memory: 4Gi
          requests:
            cpu: 4
            memory: 4Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beekeeper-sshd
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: beekeeper-sshd
        resources:
          limits:
            cpu: "8000m"
            memory: "12Gi"
          requests:
            cpu: "2000m"
            memory: "4Gi"
