kubernetes/dev/exclude-k8s-nodes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beekeeper-api
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: NotIn
                values:
                - nrp-c14.nysernet.org
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beekeeper-sshd
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: NotIn
                values:
                - nrp-c14.nysernet.org
