kubernetes/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy
    ingress.kubernetes.io/timeout-server: "1200s"
  name: beekeeper-api
spec:
  rules:
    - host: bk.nrp-nautilus.io
      http:
        paths:
        - path: /state
          pathType: Prefix
          backend:
            service:
              name: beekeeper-api
              port:
                number: 5000
  tls:
  - hosts:
    - bk.nrp-nautilus.io
